<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    style="@style/RobotScouter.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/spacing_large"
    android:paddingBottom="0dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large_medium"
        android:text="@string/dialog_add_metric_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/add_header"
                style="@style/RobotScouter.AddMetric"
                android:text="@string/metric_header_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/add_checkbox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/add_note"
                app:drawableTopCompat="@drawable/ic_metric_header"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/add_checkbox"
                style="@style/RobotScouter.AddMetric"
                android:text="@string/metric_checkbox_title"
                app:layout_constraintStart_toEndOf="@id/add_header"
                app:layout_constraintEnd_toStartOf="@id/add_stopwatch"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/add_counter"
                app:drawableTopCompat="@drawable/ic_metric_checkbox"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/add_stopwatch"
                style="@style/RobotScouter.AddMetric"
                android:text="@string/metric_stopwatch_title"
                app:layout_constraintStart_toEndOf="@id/add_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/add_spinner"
                app:drawableTopCompat="@drawable/ic_metric_stopwatch"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/add_note"
                style="@style/RobotScouter.AddMetric"
                android:text="@string/metric_note_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/add_counter"
                app:layout_constraintTop_toBottomOf="@id/add_header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableTopCompat="@drawable/ic_metric_notes" />

            <TextView
                android:id="@+id/add_counter"
                style="@style/RobotScouter.AddMetric"
                android:text="@string/metric_counter_title"
                app:layout_constraintStart_toEndOf="@id/add_note"
                app:layout_constraintEnd_toStartOf="@id/add_spinner"
                app:layout_constraintTop_toBottomOf="@id/add_checkbox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableTopCompat="@drawable/ic_metric_counter" />

            <TextView
                android:id="@+id/add_spinner"
                style="@style/RobotScouter.AddMetric"
                android:text="@string/metric_spinner_title"
                app:layout_constraintStart_toEndOf="@id/add_counter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_stopwatch"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableTopCompat="@drawable/ic_header_spinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
